<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="gobees_go" translatable="false">Go</string>
    <string name="gobees_bees" translatable="false">Bees</string>
    <string name="gobees_logo">GoBees logo</string>
    <string name="gobees_url" translatable="false">http://gobees.io/</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="permission_request_title">Permission denied</string>
    <string name="permission_request_allow_button">ALLOW</string>
    <string name="permission_request_deny_button">DENY</string>
    <string name="permission_request_denied">The app does not have permissions to use this feature.</string>
    <string name="loading_msg">Loading…</string>
    <string name="weather_condition">Condition</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="default_temperature" translatable="false">\?\u00B0C</string>
    <string name="default_humidity" translatable="false">\?%</string>
    <string name="default_pressure" translatable="false">\? hPa</string>
    <string name="default_wind" translatable="false">\? km/h</string>
    <string name="default_rain_snow" translatable="false">\? mm</string>
    <string name="format_temperature_celsius"><xliff:g id="temp">%1.0f</xliff:g>\u00B0C</string>
    <string name="format_temperature_fahrenheit"><xliff:g id="temp">%1.0f</xliff:g>\u00B0F</string>
    <string name="format_humidity_percentage"><xliff:g id="hum">%1.0f</xliff:g>%%</string>
    <string name="format_pressure_hpa"><xliff:g id="pre">%1.0f</xliff:g> hPa</string>
    <string name="format_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h - <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph - <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_rain_snow_mm"><xliff:g id="temp">%1.2f</xliff:g> mm</string>
    <string name="last_updated">Updated</string>
    <string name="default_last_updated">\? days ago</string>
    <string name="open_weather_map" translatable="false">OpenWeatherMap.org</string>
    <string name="condition_200">Thunderstorm with light rain</string>
    <string name="condition_201">Thunderstorm with rain</string>
    <string name="condition_202">Thunderstorm with heavy rain</string>
    <string name="condition_210">Light thunderstorm</string>
    <string name="condition_211">Thunderstorm</string>
    <string name="condition_212">Heavy thunderstorm</string>
    <string name="condition_221">Ragged thunderstorm</string>
    <string name="condition_230">Thunderstorm with light drizzle</string>
    <string name="condition_231">Thunderstorm with drizzle </string>
    <string name="condition_232">Thunderstorm with heavy drizzle</string>
    <string name="condition_300">Light intensity drizzle </string>
    <string name="condition_301">Drizzle</string>
    <string name="condition_302">Heavy drizzle</string>
    <string name="condition_310">Light drizzle rain</string>
    <string name="condition_311">Drizzle rain</string>
    <string name="condition_312">Heavy drizzle rain</string>
    <string name="condition_313">Shower rain and drizzle</string>
    <string name="condition_314">Heavy shower rain and drizzle</string>
    <string name="condition_321">Shower drizzle</string>
    <string name="condition_500">Light rain</string>
    <string name="condition_501">Moderate rain</string>
    <string name="condition_502">Heavy rain</string>
    <string name="condition_503">Very heavy rain</string>
    <string name="condition_504">Extreme rain</string>
    <string name="condition_511">Freezing rain</string>
    <string name="condition_520">Light shower rain</string>
    <string name="condition_521">Shower rain</string>
    <string name="condition_522">Heavy shower rain</string>
    <string name="condition_531">Ragged shower rain</string>
    <string name="condition_600">Light snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower sleet</string>
    <string name="condition_615">Light rain and snow</string>
    <string name="condition_616">Rain and snow</string>
    <string name="condition_620">Light shower snow</string>
    <string name="condition_621">Shower snow</string>
    <string name="condition_622">Heavy shower snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, dust whirls</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear sky</string>
    <string name="condition_801">Mostly clear</string>
    <string name="condition_802">Scattered clouds</string>
    <string name="condition_803">Broken clouds</string>
    <string name="condition_804">Overcast clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light breeze</string>
    <string name="condition_953">Gentle breeze</string>
    <string name="condition_954">Moderate breeze</string>
    <string name="condition_955">Fresh breeze</string>
    <string name="condition_956">Strong breeze</string>
    <string name="condition_957">High wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="more_icon">More…</string>
    <string name="enter_icon">Enter…</string>
    <string name="date_icon">Date</string>
    <string name="weather_icon">Weather icon</string>
    <string name="chart_line">Chart line</string>
    <string name="settings_icon">Settings icon</string>
    <string name="gps_location_icon">Get GPS location</string>
    <string name="location_icon">Location</string>
    <string name="map_icon">Map</string>
    <string name="num_hives">Number of hives</string>
    <string name="name_icon">Name</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="feedback_title">Send feedback</string>
    <string name="share_app_title">Share this app</string>
    <string name="about_title">About GoBees</string>
    <string name="default_apiary_name">My apiary</string>
    <string name="default_num_hives" translatable="false">0</string>
    <string name="loading_apiaries_error">Error while loading apiaries.</string>
    <string name="no_apiaries">You have no apiaries!</string>
    <string name="successfully_saved_apiary_message">Apiary saved!</string>
    <string name="successfully_deleted_apiary_message">Apiary deleted!</string>
    <string name="deleted_apiary_error_message">Error while deleting apiary.</string>
    <string name="successfully_updated_weather_message">Current weather updated!</string>
    <string name="weather_update_error_message">Error while updating current weather.</string>
    <string name="edit_apiary">Edit apiary</string>
    <string name="add_apiary">Add apiary</string>
    <string name="apiary_name_hint">Name</string>
    <string name="apiary_location_hint">Location</string>
    <string name="apiary_location__latitude_hint">Latitude (e.g. 42.352083)</string>
    <string name="apiary_location__longitude_hint">Longitude (e.g. -3.697586)</string>
    <string name="apiary_notes_hint">Notes…</string>
    <string name="searching_gps_message">Searching for GPS…</string>
    <string name="empty_apiary_message">Apiary name cannot be empty!</string>
    <string name="invalid_location_message">Invalid location!</string>
    <string name="gps_error_message">Unable to connect to GPS!</string>
    <string name="save_apiary_error_message">Error while saving apiary.</string>
    <string name="apiary_logo">Apiary logo</string>
    <string name="location_permission_request_body">Without this permission the app is unable to receive weather information or to locate your apiaries in a map. Are you sure you want to deny this permission?</string>
    <string name="apiary_hives_tab">Hives</string>
    <string name="apiary_info_tab">Info</string>
    <string name="default_hive_name">My hive</string>
    <string name="default_last_revision">\? days ago</string>
    <string name="loading_hives_error">Error while loading hives.</string>
    <string name="no_hives">You have no hives!</string>
    <string name="successfully_saved_hive_message">Hive saved!</string>
    <string name="successfully_deleted_hive_message">Hive deleted!</string>
    <string name="deleted_hive_error_message">Error while deleting hive.</string>
    <string name="last_revision_icon">Last revision icon</string>
    <string name="notes_icon">Notes</string>
    <string name="hive_logo">Hive logo</string>
    <string name="default_num_hives_long">No hives</string>
    <string name="default_notes">Notes…</string>
    <string name="general_info_title">General info</string>
    <string name="pref_bees_cat_label">Bees</string>
    <string name="pref_bees_cat_key" translatable="false">bees</string>
    <string name="pref_show_algo_output_label">Show algorithm output</string>
    <string name="pref_show_algo_output_key" translatable="false">show_algo_output</string>
    <string name="pref_show_algo_output_default" translatable="false">true</string>
    <string name="pref_blob_size_label">Blob size</string>
    <string name="pref_blob_size_key" translatable="false">blob_size</string>
    <string name="pref_blob_size_normal" translatable="false">normal</string>
    <string name="pref_min_area_label">Min. area bee</string>
    <string name="pref_min_area_key" translatable="false">min_area</string>
    <string name="pref_max_area_label">Max. area bee</string>
    <string name="pref_max_area_key" translatable="false">max_area</string>
    <string name="pref_camera_cat_label">Camera</string>
    <string name="pref_camera_cat_key" translatable="false">camera</string>
    <string name="pref_zoom_label">Zoom</string>
    <string name="pref_zoom_key" translatable="false">zoom</string>
    <string name="pref_zoom_x1" translatable="false">100</string>
    <string name="pref_frame_rate_label">Frame rate</string>
    <string name="pref_frame_rate_key" translatable="false">framerate</string>
    <string name="pref_frame_rate_1sec" translatable="false">1000</string>
    <string name="gobees_app" translatable="false">GoBees App</string>
    <string name="default_version">Version 1.0</string>
    <string name="website_btn">Website</string>
    <string name="license_btn">License</string>
    <string name="changelog_btn">Changelog</string>
    <string name="developed_author">Developed by David Miguel Lozano.</string>
    <string name="libraries">Open Source Libraries:</string>
</resources>