<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ GoBees
  ~ Copyright (c) 2016 - 2017 David Miguel Lozano
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/settings_help"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings_navigation_menu_item"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_title"/>
        <item
            android:id="@+id/help_navigation_menu_item"
            android:icon="@drawable/ic_help"
            android:title="@string/help_title"/>
    </group>
    <group
        android:id="@+id/feedback_share"
        android:checkableBehavior="none">
        <item
            android:id="@+id/feedback_navigation_menu_item"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback_title"/>
        <item
            android:id="@+id/share_app_navigation_menu_item"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app_title"/>
    </group>
    <group
        android:id="@+id/about"
        android:checkableBehavior="none">
        <item
            android:id="@+id/about_navigation_menu_item"
            android:icon="@drawable/ic_info"
            android:title="@string/about_title"/>
    </group>
</menu>