<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_apiary_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apiary_name_hint"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_apiary_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/get_location_icon"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/apiary_location_hint"
                android:inputType="none"
                android:maxLines="1"/>

            <ImageView
                android:id="@+id/get_location_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:contentDescription="@string/gps_location_icon"
                android:src="@drawable/ic_my_location"
                android:tint="@color/colorAccent"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/add_apiary_notes"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:gravity="top"
            android:hint="@string/apiary_notes_hint"
            android:inputType="textCapSentences"/>

    </LinearLayout>
</ScrollView>
