<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ GoBees
  ~ Copyright (c) 2016 - 2017 David Miguel Lozano
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/gpl-3.0.txt>.
  -->

<com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout
    android:id="@+id/refresh_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="24dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="24dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/general_info_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryText"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/last_revision_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="12dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/last_revision_icon"
                        android:src="@drawable/ic_last_revision"
                        android:tint="@color/colorSecondaryText"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/last_revision"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="bottom"
                            android:text="@string/default_last_revision"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorSecondaryText"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/colorDivider"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="12dp"
                        android:adjustViewBounds="false"
                        android:contentDescription="@string/notes_icon"
                        android:src="@drawable/ic_notes"
                        android:tint="@color/colorSecondaryText"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/notes_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="bottom"
                            android:text="@string/default_notes"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorSecondaryText"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</com.davidmiguel.gobees.utils.ScrollChildSwipeRefreshLayout>

