<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="112dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/hive_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/hive_land"
            app:riv_border_color="@android:color/black"
            app:riv_border_width="0dp"
            app:riv_corner_radius="50dp"
            app:riv_oval="false"/>

        <TextView
            android:id="@+id/hive_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@id/hive_image"
            android:layout_toStartOf="@+id/more_icon"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryText"/>

        <ImageView
            android:id="@+id/more_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/more_icon"
            android:src="@drawable/ic_more_vert"
            android:tint="@color/colorIcons"/>

        <ImageView
            android:id="@+id/last_revision_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/hive_image"
            android:adjustViewBounds="false"
            android:contentDescription="@string/last_revision_icon"
            android:src="@drawable/ic_last_revision"
            android:tint="@color/colorSecondaryText"/>

        <TextView
            android:id="@+id/last_revision"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/last_revision_icon"
            android:layout_toStartOf="@+id/enter_icon"
            android:gravity="bottom"
            android:text="10 days ago"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorSecondaryText"/>

        <ImageView
            android:id="@+id/enter_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/enter_icon"
            android:src="@drawable/ic_enter"
            android:tint="@color/colorAccent"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>